tests/baselines/reference/contextualTyping24.errors.txt
tests/cases/compiler/contextualTyping24.ts(1,55): error TS2322: Type '(this: void, a: string) => number' is not assignable to type '(a: { (): number; (i: number): number; }) => number'.
  Types of parameters 'a' and 'a' are incompatible.
    Type '{ (): number; (i: number): number; }' is not assignable to type 'string'.


==== tests/cases/compiler/contextualTyping24.ts (1 errors) ====
    var foo:(a:{():number; (i:number):number; })=>number; foo = function(this: void, a:string){return 5};
                                                          ~~~
!!! error TS2322: Type '(this: void, a: string) => number' is not assignable to type '(a: { (): number; (i: number): number; }) => number'.
!!! error TS2322:   Types of parameters 'a' and 'a' are incompatible.
!!! error TS2322:     Type '{ (): number; (i: number): number; }' is not assignable to type 'string'.